--- a/src/PlanIt/EventBundle/Resources/views/templates/modules.html.twig
+++ b/src/PlanIt/EventBundle/Resources/views/templates/modules.html.twig
@@ -2,7 +2,7 @@
 {% for module in evnt.modules %}
 	<a href="/app_dev.php/event/{{evnt.id}}/module/{{module.id}}">
 		<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 module" >
-			<div id="module_{{module.type}}">
+			<div id="module_{{module.type}}" class="module_button">
 				<img src="/images/event/pictos_modules/picto_{{module.type}}.png" /> 	
 				<p>{{module.name}}</p>    	
 			</div>	
