--- a/src/PlanIt/GuestsBundle/Resources/public/css/general.scss
+++ b/src/PlanIt/GuestsBundle/Resources/public/css/general.scss
@@ -23,6 +23,9 @@ $header: #f1f1f1;
 .modal-body {
 	input[type="submit"] {
 		background-color: $color;
+		&:hover {
+			background-color: darken($color, 5%);
+		}
 	}
 	input[type="text"],input[type="email"] { 
 		display: block;
