--- a/src/PlanIt/GuestsBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/GuestsBundle/Resources/views/Page/index.html.twig
@@ -21,7 +21,7 @@
             
             {{ render(controller('PlanItGuestsBundle:TypeGuest:form', { 'module_id' : module_id } ))}}
             <div class="row">
-                <div class="col-md-3"><button data-toggle="modal" data-target=".addTypeGuestModal">Ajouter un invité</button></div>
+                <div class="col-md-3"><button data-toggle="modal" data-target=".addTypeGuestModal">Ajouter un type d'invité</button></div>
                 <div class="col-md-3"><button>Ajouter un mode de paiement</button></div>
                 <div class="col-md-2 col-md-offset-4" id="checkbox_payable">                  
                     <!--Template payable.html.twig -->
