--- a/src/PlanIt/GuestsBundle/Resources/views/templates/guests.html.twig
+++ b/src/PlanIt/GuestsBundle/Resources/views/templates/guests.html.twig
@@ -66,11 +66,8 @@
             <h4 class="modal-title" id="myModalLabel">Voulez vous vraiment supprimer cet invité?</h4>
             </div>
             <div class="modal-body">
-                <!-- <form method="delete"  class="blogger">
-                    <input type="submit" value="Oui">
-                </form> -->
-                    <button onclick="deleteGuest()" class="btn btn-default"> Oui </button>
-                    <button class="btn btn-default" data-dismiss="modal"> Non </button>
+                <button id="delete_confirm" class="btn btn-default"> Oui </button>
+                <button class="btn btn-default" data-dismiss="modal"> Non </button>
 
             </div>
         </div>
