--- a/src/PlanIt/GuestsBundle/Resources/public/css/general.scss
+++ b/src/PlanIt/GuestsBundle/Resources/public/css/general.scss
@@ -33,28 +33,19 @@ $header: #f1f1f1;
 }
 
 .modal.validate {
-	form {
-		width: 30%;
-		float: left;
-		margin-left: 20%;
-		input[type="submit"] {
-			background: url("/images/utils.png") no-repeat 50% 0px;
-			margin: 0 !important;
-			height: 82px;
-			padding-top: 26px;
-			color: #000 !important;
-			background-size: 17%;
-		}
-	}
-	
 	button {
-		background: url("/images/utils.png") no-repeat 50% -75px;
-		width: 30%;
-		height: 70px;
+		background: url("/images/utils.png") no-repeat;
+		width: 50%;
+		height: 87px;
 		display: inline-block;
-		background-size: 20%;
-		padding-top: 42px;
+		background-size: 17%;
+		padding-top: 71px;
 		font-size: 13px;
 		border: none;
+		background-position: 50% -1px;
+		&#delete_cancel {
+			background-position: 50% -142px;
+			background-size: 20%;
+		}
 	}
 }
