--- a/src/PlanIt/GuestsBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/GuestsBundle/Resources/views/Page/index.html.twig
@@ -9,6 +9,7 @@
 {% endblock %}
 
 {% block content %}
+
 	<section id="module_content">
 	   <div class="container guest-module">
             <div class="row" id="title">
@@ -18,18 +19,24 @@
             <div class="row" id="separator">
                 <div class="col-md-12"> </div>
             </div>
-            
+
+
             {{ render(controller('PlanItGuestsBundle:TypeGuest:form', { 'module_id' : module_id } ))}}
             <div class="row">
                 <div class="col-md-3"><button data-toggle="modal" data-target=".addTypeGuestModal">Ajouter un invité</button></div>
-                <div class="col-md-3"><button data-toggle="modal" data-target=".addPaymentMeansModal">Ajouter un mode de paiement</button></div>
-                <div class="col-md-2 col-md-offset-4" id="checkbox_payable">                  
+                {% if payable %}
+                    <div class="col-md-3"><button data-toggle="modal" data-target=".addPaymentMeansModal">Ajouter un mode de paiement</button></div>
+                {% endif %}
+                <div class="col-md-2 pull-right" id="checkbox_payable">                  
                     <!--Template payable.html.twig -->
                 </div>
             </div>
                  {{ render(controller('PlanItGuestsBundle:Guest:form', { 'module_id' : module_id } ))}}
-                 {{ render(controller('PlanItGuestsBundle:PaymentMeans:form', { 'module_id' : module_id } ))}}          
+                 {{ render(controller('PlanItGuestsBundle:PaymentMeans:form', { 'module_id' : module_id } ))}}
+
+
             <div id="guests_list">
+
                 <!--Template guests.html.twig -->
                 
             </div>
