remplissage dynamique des infos
nombre de dodos et nombre d’inscrits

--- a/src/PlanIt/EventBundle/Resources/views/Page/event.html.twig
+++ b/src/PlanIt/EventBundle/Resources/views/Page/event.html.twig
@@ -16,19 +16,8 @@
 			<div class="col-md-5"> 
 				<div id="pie_chart"></div>
 			</div>
-			<div class="col-md-4"> 
-				<div class="info_dte">
-		    		<img src="/images/event/info_dte_zzz.png" /> 
-		    		<p> NOMBRE DE DODOS </br> <span>5</span> </p>
-				</div>
-				<div class="info_dte">
-		    		<img src="/images/event/info_dte_invite.png" /> 
-		    		<p> NOMBRE D'INSCRITS </br> <span>18</span> </p>
-				</div>
-				<div class="info_dte info_color">
-		    		<img src="/images/event/info_dte_budget.png" /> 
-		    		<p> BALANCE DU BUDGET </br> <span>36</span> </p>
-				</div>
+			<div class="col-md-4" id="infos"> 
+				<!--Template infos -->
 			</div>
 		</div>
 
