Modification d'un guest

--- a/src/PlanIt/GuestsBundle/Resources/public/css/general.scss
+++ b/src/PlanIt/GuestsBundle/Resources/public/css/general.scss
@@ -2,7 +2,7 @@
 $color: #1d89cf;
 $no: #e56454;
 $yes: #77e469;
-$wait : #e48069;
+$wait : #ff9966;
 $head-list: #d8d7d7;
 $row-list: #f1f1f1;
 $header: #f1f1f1;
