--- a/src/PlanIt/EventBundle/Resources/views/Page/form.html.twig
+++ b/src/PlanIt/EventBundle/Resources/views/Page/form.html.twig
@@ -7,4 +7,6 @@
         <input type="submit" value="Ajouter">
     </p>
 </form>
-<script>eventscript();</script>
+<script>
+	$('select').selectize();
+</script>
