--- a/src/PlanIt/UserBundle/Resources/views/templates/events.html.twig
+++ b/src/PlanIt/UserBundle/Resources/views/templates/events.html.twig
@@ -5,7 +5,7 @@
 			<div class="event-thumbnail">
 				<div class="head">
 					<h2>{{event.name}}</h2>
-					<span class="date">J-5</span>
+					<span class="date"> {{ event.begin_date}}</span>
 				</div>
 				<div class="content">
 					<div class="image-cropper">
