test filtre twig

--- a/src/PlanIt/GuestsBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/GuestsBundle/Resources/views/Page/index.html.twig
@@ -23,7 +23,7 @@
 
             {{ render(controller('PlanItGuestsBundle:TypeGuest:form', { 'module_id' : module_id } ))}}
             <div class="row">
-                <div class="col-md-3"><button data-toggle="modal" data-target=".addTypeGuestModal">Ajouter un invité</button></div>
+                <div class="col-md-3"><button data-toggle="modal" data-target=".addTypeGuestModal">Ajouter un type d'invité</button></div>
                 {% if payable %}
                     <div class="col-md-3"><button data-toggle="modal" data-target=".addPaymentMeansModal">Ajouter un mode de paiement</button></div>
                 {% endif %}
