--- a/src/PlanIt/BudgetBundle/Resources/views/layout.html.twig
+++ b/src/PlanIt/BudgetBundle/Resources/views/layout.html.twig
@@ -8,14 +8,16 @@
     {% endstylesheets %}
 {% endblock %}
 
-{% block javascripts %}
+ {% block javascripts %}
     {{ parent() }} <!-- pour ne pas effacer les autres feuilles de style -->
-    {% javascripts  %}
-          <script language="javascript" src="{{ asset_url }}"></script>
+  {% javascripts '@PlanItBudgetBundle/Resources/views/templates/type_item.html.twig'
+  '@PlanItBudgetBundle/Resources/views/templates/menu.html.twig' filter="twig_js, ?yui_js" %}
+    <script language="javascript" src="{{ asset_url }}"></script>
     {% endjavascripts %}
-    
-    {% javascripts '@PlanItBudgetBundle/Resources/public/js/*.js'
-                    '%kernel.root_dir%/Resources/js/*.js'  %}
-          <script language="javascript" src="{{ asset_url }}"></script>
-    {% endjavascripts %}
+    {% javascripts 
+    '%kernel.root_dir%/Resources/js/*.js'
+    '@PlanItBudgetBundle/Resources/public/js/*.js'
+    %}
+     <script type="text/javascript" src="{{ asset_url }}"></script>
+  {% endjavascripts %}
 {% endblock %}
