add PaymentMeans + add Guest
Ajout d’un moyen de payment + ajout d’un guest dans le bon type

--- a/src/PlanIt/GuestsBundle/Resources/views/Guest/form.html.twig
+++ b/src/PlanIt/GuestsBundle/Resources/views/Guest/form.html.twig
@@ -5,7 +5,7 @@
                 <h4 class="modal-title" id="myModalLabel">Ajouter un invité</h4>
                 </div>
                 <div class="modal-body">
-                    <form action="/app_dev.php/api/guests/{{module_id}}" method="post" {{ form_enctype(form) }} class="blogger">
+                    <form id="form-post-guest" action="" method="post" {{ form_enctype(form) }} class="blogger">
                         {{ form_widget(form) }}
 
 				    <p>
