--- a/src/PlanIt/GuestsBundle/Resources/views/TypeGuest/form.html.twig
+++ b/src/PlanIt/GuestsBundle/Resources/views/TypeGuest/form.html.twig
@@ -5,7 +5,7 @@
                 <h4 class="modal-title" id="myModalLabel">Ajouter un type d'invité</h4>
                 </div>
                 <div class="modal-body">
-                    <form action="/app_dev.php/api/types/{{module_id}}/guests" method="post" {{ form_enctype(form) }} class="blogger">
+                    <form action="/app_dev.php/api/typeguests/{{module_id}}" method="post" {{ form_enctype(form) }} class="blogger">
                     {{ form_widget(form) }}
 
 				    <p>
