Modification payable guest module

--- a/src/PlanIt/GuestsBundle/Resources/views/templates/payable.html.twig
+++ b/src/PlanIt/GuestsBundle/Resources/views/templates/payable.html.twig
@@ -1,4 +1,4 @@
 {% twig_js name="guests_payable" %}
 <form id="paying-checkbox" action="">
-	<input type="checkbox" {% if payable %} checked {%endif%}>Evenement payant
+	<input id="payable-{{module_id}}" onclick="updatePayable({{module_id}})" type="checkbox" {% if payable %} checked {%endif%}>Evenement payant
 </form>
