--- a/src/PlanIt/GuestsBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/GuestsBundle/Resources/views/Page/index.html.twig
@@ -22,14 +22,8 @@
 
 
             {{ render(controller('PlanItGuestsBundle:TypeGuest:form', { 'module_id' : module_id } ))}}
-            <div class="row">
-                <div class="col-md-3"><button data-toggle="modal" data-target=".addTypeGuestModal">Ajouter un type d'invité</button></div>
-                {% if payable %}
-                    <div class="col-md-3"><button data-toggle="modal" data-target=".addPaymentMeansModal">Ajouter un mode de paiement</button></div>
-                {% endif %}
-                <div class="col-md-2 pull-right" id="checkbox_payable">                  
-                    <!--Template payable.html.twig -->
-                </div>
+            <div id="header_list" class="row">
+                
             </div>
                  {{ render(controller('PlanItGuestsBundle:Guest:form', { 'module_id' : module_id } ))}}
                  {{ render(controller('PlanItGuestsBundle:PaymentMeans:form', { 'module_id' : module_id } ))}}
