--- a/src/PlanIt/GuestsBundle/Resources/views/templates/guests.html.twig
+++ b/src/PlanIt/GuestsBundle/Resources/views/templates/guests.html.twig
@@ -4,7 +4,7 @@
     <div class="row list" >
         <div class="head-list accordion-head">
             <form action="">
-                <select name="actions" id="actions">
+                <select onchange="multipleAction()" name="actions" id="actions">
                         <option value="none">Action</option>
                         {% if moduleGuestType == false %}
                             <option value="send">Envoyer</option>
@@ -42,7 +42,7 @@
                 {% if guest.type_guest.id == type.id %}
                     <div class="row-list row">
                         <form action="" id="select-field" class="col-md-1">
-                            <input type="checkbox">
+                            <input name="checkbox-action" id="{{guest.id}}" type="checkbox">
                         </form>
                         <input type="hidden" id="type_guest-{{guest.id}}" value="{{guest.type_guest.id}}">
                         <div class="firstname col-md-1"><input onblur="updateGuest({{guest.id}}, 'firstname')" type="text" id="firstname-{{guest.id}}" value="{{guest.firstname}}"></div>
