--- a/src/PlanIt/BudgetBundle/Resources/views/templates/type_item.html.twig
+++ b/src/PlanIt/BudgetBundle/Resources/views/templates/type_item.html.twig
@@ -88,6 +88,7 @@
 				new CBPFWTabs( el );
 			});
 		})();
-		chartApport();
-		chartDepense();
-	</script>
+
+</script>
+    <script>getListInflow({{module.id}});</script>
+    <script>getListExpense({{module.id}});</script>
