--- a/app/Resources/views/templates/sidebar.html.twig
+++ b/app/Resources/views/templates/sidebar.html.twig
@@ -1,7 +1,7 @@
 
 {% twig_js name="sidebar" %}
 <script>accordeon();</script>
-<div id="logo">PLAN <span class="blue">IT</span></div>
+<a href="http://planit.dev/app_dev.php/home/3"><div id="logo">PLAN <span class="blue">IT</span></div></a>
 <div id="search">
     <form>
       <input name="search" type="search" class="search" placeholder="Rechercher">
