--- a/src/PlanIt/UserBundle/Resources/public/css/sidebar.scss
+++ b/src/PlanIt/UserBundle/Resources/public/css/sidebar.scss
@@ -15,6 +15,8 @@
 		height: 60px;
 		line-height: 64px;
 		text-align: center;
+		cursor: pointer;
+		text-decoration: none;
 		@include box-shadow(0px,4px,2px,-2px,#1c1c1c);
 		.blue {
 			color: $blue_logo;
