--- a/src/PlanIt/BudgetBundle/Resources/views/templates/type_item.html.twig
+++ b/src/PlanIt/BudgetBundle/Resources/views/templates/type_item.html.twig
@@ -13,13 +13,12 @@
 	</div>
 
 	<div class="col-md-4"> 
-		<div class="info_dte info_color">
-			<img src="/images/budget/info_dte_balance.png" /> 
-			<p> BALANCE </br> <span>-158€</span> </p>
+		<div class="info_dte info_color" id="balance">
+			<p> BALANCE </br> <span >{{balance}}€</span> </p>
 		</div>							
 		<div class="info_dte">
 			<img src="/images/budget/info_dte_limite.png" /> 
-			<p> BUDGET LIMITE</br> <span>1000 €</span> </p>
+			<p> BUDGET LIMITE</br> <span>{{max}} €</span> </p>
 		</div>
 	</div>
 </section>
@@ -32,13 +31,18 @@
 				<thead>
 					<tr>
 						<th>Article *</th>
-						<th>Quantité *</th>
-						<th>En stock *</th>
-						<th>A acheter</th>
-						<th>Prix unitaire *</th>
-						<th>Prix total</th>
-						<th>Consommé *</th>
-						<th>Acheté *</th>											
+						{% if type_item.type == false %}
+							<th>Quantité *</th>
+							<th>En stock *</th>
+							<th>A acheter</th>
+							<th>Prix unitaire *</th>
+							<th>Prix total</th>
+							<th>Consommé *</th>
+							<th>Acheté *</th>
+						{% endif %}
+						{% if type_item.type == true %}
+							<th>Montant *</th>
+						{% endif %}											
 						<th>Supprimer</th>
 					</tr>
 				</thead>
@@ -50,33 +54,39 @@
 							<td data-title="Article">
 								<input type="text" id="name-item-{{item.id}}" value="{{item.name}}">
 							</td>
-							<td data-title="Quantité">
-								<input type="text" id="quantity-item-{{item.id}}" value="{{item.quantity}}">
-							</td>
-							<td data-title="En stock">
-								<input type="text" id="stock-item-{{item.id}}" value="{{item.stock}}">
-							</td>
-							<td data-title="A acheter">
-								{{item.quantity - item.stock}}
-							</td>
-							<td data-title="Prix unitaire">
-								<input type="text" id="price-item-{{item.id}}" value="{{item.price}}">
-							</td>
+							{% if type_item.type == false %}
+								<td data-title="Quantité">
+									<input type="text" id="quantity-item-{{item.id}}" value="{{item.quantity}}">
+								</td>
+								<td data-title="En stock">
+									<input type="text" id="stock-item-{{item.id}}" value="{{item.stock}}">
+								</td>
+								<td data-title="A acheter">
+									{{item.quantity - item.stock}}
+								</td>
+								<td data-title="Prix unitaire">
+									<input type="text" id="price-item-{{item.id}}" value="{{item.price}}">
+								</td>
+							{% endif %}
 							<td data-title="Prix total">
 								{{item.price * (item.quantity - item.stock)}}
 							</td>
-							<td data-title="Consommé">
-								<input type="text" id="consummate-item-{{item.id}}" value="{{item.consummate}}">
-							</td>
-							<td data-title="Acheté">
-								<input type="checkbox" {% if item.bought %} checked {%endif%}/>
-							</td>
+							{% if type_item.type == false %}
+								<td data-title="Consommé">
+									<input type="text" id="consummate-item-{{item.id}}" value="{{item.consummate}}">
+								</td>
+								<td data-title="Acheté">
+									<input type="checkbox" {% if item.bought %} checked {%endif%}/>
+								</td>
+							{% endif %}
 							<td data-title="Supprimer">X</td>
 						</tr>
-					{% endfor %}							
+					{% endfor %}						
 				</tbody>
 			</table>
 			<span id="legend"> * Données modifiables. Cliquez pour modifier.</span>
+			<div class="col-md-2 pull-right add-item"><button data-toggle="modal" data-target=".addItemModal">Ajouter un article</button></div>
+			
 		</div>
 	</section>
 {% endfor %}
